.on-deck/apps/default/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: default
  labels:
    app.kubernetes.io/name: glance
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - dashboard.wakkalabs.com
      secretName: dashboard-tls
  rules:
    - host: dashboard.wakkalabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 8080
